@@ -1,6 +1,6 @@
 /* file-p.c: file predicates.
 
-   Copyright 1992, 1993, 1994, 2008 Karl Berry.
+   Copyright 1992, 1993, 1994, 2008, 2015, 2016 Karl Berry.
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
